--- a/graphql-gateway-server/pom.xml
+++ b/graphql-gateway-server/pom.xml
@@ -40,12 +40,27 @@
             <artifactId>graphql-server</artifactId>
         </dependency>
 
-        <!-- Tests -->
+        <!-- JUnit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.0</version> <!-- 최신 버전 사용 -->
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Spring Boot 테스트 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -61,6 +76,12 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- Maven Surefire Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version> <!-- 안정적인 최신 버전 -->
             </plugin>
         </plugins>
     </build>
